--- a/vignettes/application_hgdp.Rmd
+++ b/vignettes/application_hgdp.Rmd
@@ -384,7 +384,7 @@ plot_index_vs_K(list(loglikelihood_HGDP_em, loglikelihood_HGDP_sqp, loglikelihoo
                 c("em", "sqp", "vi"), index.id = "loglik")
 ```
 
-&emsp;&emsp;We notice that the log-likelihood curves of EM and SQP have a continuous upward trend, which is due to the fact that there is no prior distribution constraint, which is prone to overfitting. The log-likelihood curves of EM and SQP slow down from K equals 7.
+&emsp;&emsp;We notice that the log-likelihood curves of EM and SQP have a continuous upward trend, which is due to the fact that there is no prior distribution constraint, which is prone to overfitting. The log-likelihood curves of EM and SQP slow down from `K` equals 7.
 
 &emsp;&emsp;The log-likelihood curve of VI flattens out from about `K` equals 6, and shows that the optimal `K` is 8 and 11.
 
@@ -409,13 +409,13 @@ plot_index_vs_K(list(ELBO_HGDP_vi),
                 "vi", index.id = "elbo")
 ```
 
-&emsp;&emsp;The ELBO curve of VI shows the curve oscillating from K equals 7.
+&emsp;&emsp;The ELBO curve of VI shows the curve oscillating from `K` equals 7.
 
 &emsp;&emsp;In conclusion, we note that when `K` is around 7, the fit is already doing very well. The optimal `K` should be reached around 11, but from the structure diagram, the populations appear redundant at this time.
 
 # Full Data
 
-We only fit the complete data for the relatively good `K` using SVI algorithm.
+&emsp;&emsp;We only fit the complete data for the relatively good `K` using SVI algorithm.
 
 ```{r eval=FALSE}
 result_HGDP_svi_K7_full <- psd_fit_svi(t(data_HGDP_full), 7,
@@ -450,9 +450,24 @@ result_HGDP_svi_K11_full <- psd_fit_svi(t(data_HGDP_full), 11,
 # [=====>-----------------------------------------------------] 110000/1e+06 (29m)
 ```
 
-&emsp;&emsp;We store the result as `result_HGDP_full.RData`.
+&emsp;&emsp;In addition, we iterated for a million times for the case of the **best** `K` (equals 7 and 11).
 
-&emsp;&emsp;We import the data directly.
+```{r eval=FALSE}
+result_HGDP_svi_K7_full_million <- psd_fit_svi(t(data_HGDP_full), 7,
+                                               1e-9, 1e+6, 1e+5, 10,
+                                               100, 2000,
+                                               5e-3, 1e-1,
+                                               1, 0.5)
+# [============================================================] 1e+06/1e+06 ( 3h)
+result_HGDP_svi_K11_full_million <- psd_fit_svi(t(data_HGDP_full), 11,
+                                               1e-9, 1e+6, 1e+5, 10,
+                                               100, 2000,
+                                               5e-3, 1e-1,
+                                               1, 0.5)
+# [============================================================] 1e+06/1e+06 ( 4h)
+```
+
+&emsp;&emsp;We store the result as `result_HGDP_full.RData`. Then we import the data directly.
 
 ```{r}
 load(system.file("extdata", "result_HGDP_full.RData", package = "AwesomePackage", mustWork = TRUE))
@@ -483,13 +498,55 @@ plot_structure(result_HGDP_svi_K11_full$P,
                title = "Data Set: HGDP (full) | Method: SVI | K: 11")
 ```
 
-In addition, we iterated for a million times for the case of `K` equals 7 to get `result_HGDP_svi_K7_full_million`, and made a structure diagram similar to the way in the article [@raj2014faststructure], and the results were almost the same.
+&emsp;&emsp;For the **best** `K` (equals 7 and 11), we draw more subtle structures. We can compare with the results in the articles [@li2008worldwide; @raj2014faststructure; @gopalan2016scaling], and the structure diagram is almost the same.
 
 ```{r fig.height=3, fig.width=9, fig.show='hold'}
-plot_structure(result_HGDP_svi_K7_full_million$P, pops = c(7,4,5,3,6,1,2), 
-               label = label, map.indiv = indiv, map.pop = spop, gap = 3, font.size = 5, 
+plot_structure(result_HGDP_svi_K7_full_million$P, 
+               label = label, map.indiv = indiv, map.pop = spop, gap = 2, font.size = 6, 
                title = "Data Set: HGDP (full) | Method: SVI (1e+6 interations) | K: 7")
+plot_structure(result_HGDP_svi_K11_full_million$P, 
+               label = label, map.indiv = indiv, map.pop = spop, gap = 2, font.size = 6, 
+               title = "Data Set: HGDP (full) | Method: SVI (1e+6 interations) | K: 11")
 ```
+
+# Algorithm Evaluation
+
+## Convergence accuracy
+
+&emsp;&emsp;For suitable `K`, the SVI algorithm and SQP algorithm perform best in terms of convergence accuracy, followed by VI algorithm and finally EM algorithm. See *Get started* in [AwesomePackage](https://jonathonchow.github.io/AwesomePackage/) for details.
+
+&emsp;&emsp;For the unknown `K`, due to the lack of prior constraints, the EM algorithm and SQP algorithm are prone to overfitting when the population number is redundant. We can see this clearly in [Appendix B](#AppendixB). Therefore, we had better use VI algorithm and SVI algorithm to select the appropriate `K`.
+
+## Convergence efficiency
+
+&emsp;&emsp;In addition to measuring the accuracy of convergence, we still need to consider the efficiency of convergence. We have two indicators to measure the convergence efficiency, which are convergence speed (the number of iterations required to achieve convergence) and convergence time (the time required for a single iteration). We can plot the convergence time using the code below, and we can see the convergence speed plots in [Appendix A](#AppendixA).
+
+```{r}
+L <- list(c(1,3,4,9,13,27,15,25,34,60,44,60,60,60),
+          c(1,2,4,7,8,15,25,59,35,84,80,120,103,120),
+          c(3,1,3,5,5,5,6,7,8,9,8,9,14,12),
+          c(8,16,28,22,40,20,17,31,60,26,41,60,21,120))
+plot_index_vs_K(L, c("em", "sqp", "vi", "svi"), index.id = "time", 
+                title = "Data Set: HGDP")
+```
+
+&emsp;&emsp;EM algorithm is poor in terms of convergence time and convergence speed, and the convergence time increases rapidly with the increase of `K`.
+
+&emsp;&emsp;Although SQP algorithm has a good performance in terms of convergence speed, the convergence time of the unaccelerated SQP algorithm is extremely slow, which increases rapidly with the increase of `K`.
+
+&emsp;&emsp;VI algorithm has similar convergence speed with EM algorithm (both of them have poor performance), but in terms of convergence time, VI algorithm has excellent performance, especially with the increase of `K`, the required time increases slowly.
+
+&emsp;&emsp;Due to different principles, we only consider the convergence time for the SVI algorithm. Although the performance of convergence time of SVI algorithm is poor on small data sets, the time of SVI algorithm is almost only related to the length of single sampling (the number of individuals), that is to say, for complete data sets, the convergence time of SVI is almost unchanged. This means that SVI has irreplaceable advantages for large data sets. Meanwhile, similar to VI algorithm, the change of convergence time of SVI algorithm is relatively insensitive to `K`. By the way, compared with other algorithms, the convergence time of SVI algorithm is irregular due to the randomness of sampling.
+
+## Algorithm selection criteria
+
+&emsp;&emsp;In conclusion, we should consider both algorithm accuracy and algorithm efficiency.
+
+&emsp;&emsp;For small data sets, we can get good results by using VI directly. Or we can first use VI algorithm to reach the vicinity of the optimal value, and then use SQP algorithm to improve the convergence accuracy. The reason why the SQP algorithm is not directly used here is that the unaccelerated SQP algorithm is inefficient and the SQP algorithm is extremely easy to converge to local minima.
+
+&emsp;&emsp;For large data sets, we use the SVI algorithm without question.
+
+&emsp;&emsp;Of course, if `K` is unknown, we should pick `K` first, in the same way as above.
 
 # Literature Cited {-}
 
@@ -497,9 +554,9 @@ plot_structure(result_HGDP_svi_K7_full_million$P, pops = c(7,4,5,3,6,1,2),
 
 \newpage 
 
-# Appendix A {-}
+# Appendix A {- #AppendixA}
 
-```{r out.width='25%', fig.show='hold'}
+```{r}
 load(system.file("extdata", "result_HGDP_em.RData", package = "AwesomePackage", mustWork = TRUE))
 load(system.file("extdata", "result_HGDP_sqp.RData", package = "AwesomePackage", mustWork = TRUE))
 load(system.file("extdata", "result_HGDP_vi.RData", package = "AwesomePackage", mustWork = TRUE))
@@ -579,7 +636,7 @@ plot_loss(list(result_HGDP_svi_K15_sample$Loss), "svi", 1e+4,
           title = "Data Set: HGDP | K: 15")
 ```
 
-# Appendix B {-}
+# Appendix B {- #AppendixB}
 
 ## EM algorithm {-}
 
