--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -99,6 +99,26 @@
   year={2008},
   publisher={American Association for the Advancement of Science}
 }
+@article{wright1949genetical,
+  title={The genetical structure of populations},
+  author={Wright, Sewall},
+  journal={Annals of eugenics},
+  volume={15},
+  number={1},
+  pages={323--354},
+  year={1949},
+  publisher={Wiley Online Library}
+}
+@article{balding1995method,
+  title={A method for quantifying differentiation between populations at multi-allelic loci and its implications for investigating identity and paternity},
+  author={Balding, David J and Nichols, Richard A},
+  journal={Genetica},
+  volume={96},
+  number={1},
+  pages={3--12},
+  year={1995},
+  publisher={Springer}
+}
 @article{goldfarb1983numerically,
   title={A numerically stable dual method for solving strictly convex quadratic programs},
   author={Goldfarb, Donald and Idnani, Ashok},
