--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -54,6 +54,109 @@
   journal={arXiv preprint arXiv:2105.13440},
   year={2021}
 }
+@book{bishop2006pattern,
+  title={Pattern recognition and machine learning},
+  author={Bishop, Christopher M and Nasrabadi, Nasser M},
+  volume={4},
+  number={4},
+  year={2006},
+  publisher={Springer}
+}
+@book{nocedal2006numerical,
+  title={Numerical Optimization},
+  author={Nocedal, Jorge and Wright, Stephen J},
+  year={2006},
+  publisher={Springer}
+}
+@book{boyd2004convex,
+  title={Convex Optimization},
+  author={Boyd, Stephen and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge University Press}
+}
+@article{goldfarb1983numerically,
+  title={A numerically stable dual method for solving strictly convex quadratic programs},
+  author={Goldfarb, Donald and Idnani, Ashok},
+  journal={Mathematical programming},
+  volume={27},
+  number={1},
+  pages={1--33},
+  year={1983},
+  publisher={Springer}
+}
+@article{boyd2011distributed,
+  title={Distributed optimization and statistical learning via the alternating direction method of multipliers},
+  author={Boyd, Stephen and Parikh, Neal and Chu, Eric and Peleato, Borja and Eckstein, Jonathan and others},
+  journal={Foundations and Trends{\textregistered} in Machine learning},
+  volume={3},
+  number={1},
+  pages={1--122},
+  year={2011},
+  publisher={Now Publishers, Inc.}
+}
+@online{guennebaud2022api,
+  title={The API Documentation for Eigen3},
+  author={Guennebaud, Gaël and others},
+  year={2022},
+  url={https://eigen.tuxfamily.org/dox/},
+  urldate={2022-04-21}
+}
+@article{blei2017variational,
+  title={Variational inference: A review for statisticians},
+  author={Blei, David M and Kucukelbir, Alp and McAuliffe, Jon D},
+  journal={Journal of the American statistical Association},
+  volume={112},
+  number={518},
+  pages={859--877},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+@article{hoffman2013stochastic,
+  title={Stochastic Variational Inference},
+  author={Hoffman, Matthew D and Blei, David M and Wang, Chong and Paisley, John},
+  journal={Journal of Machine Learning Research},
+  volume={14},
+  pages={1303--1347},
+  year={2013}
+}
+@article{amari1998natural,
+  title={Natural gradient works efficiently in learning},
+  author={Amari, Shun-Ichi},
+  journal={Neural computation},
+  volume={10},
+  number={2},
+  pages={251--276},
+  year={1998},
+  publisher={MIT Press}
+}
+@article{robbins1951stochastic,
+  title={A stochastic approximation method},
+  author={Robbins, Herbert and Monro, Sutton},
+  journal={The annals of mathematical statistics},
+  pages={400--407},
+  year={1951},
+  publisher={JSTOR}
+}
+@article{wright1949genetical,
+  title={The genetical structure of populations},
+  author={Wright, Sewall},
+  journal={Annals of eugenics},
+  volume={15},
+  number={1},
+  pages={323--354},
+  year={1949},
+  publisher={Wiley Online Library}
+}
+@article{balding1995method,
+  title={A method for quantifying differentiation between populations at multi-allelic loci and its implications for investigating identity and paternity},
+  author={Balding, David J and Nichols, Richard A},
+  journal={Genetica},
+  volume={96},
+  number={1},
+  pages={3--12},
+  year={1995},
+  publisher={Springer}
+}
 @article{abecasis2012integrated,
   title={An integrated map of genetic variation from 1,092 human genomes.},
   author={Abecasis, Goncalo R and Auton, Adam and Brooks, Lisa D and DePristo, Mark A and Durbin, Richard M and Handsaker, Robert E and Kang, Hyun Min and Marth, Gabor T and McVean, Gil A and 1000 Genomes Project Consortium and others},
@@ -98,63 +201,4 @@
   pages={1100--1104},
   year={2008},
   publisher={American Association for the Advancement of Science}
-}
-@article{wright1949genetical,
-  title={The genetical structure of populations},
-  author={Wright, Sewall},
-  journal={Annals of eugenics},
-  volume={15},
-  number={1},
-  pages={323--354},
-  year={1949},
-  publisher={Wiley Online Library}
-}
-@article{balding1995method,
-  title={A method for quantifying differentiation between populations at multi-allelic loci and its implications for investigating identity and paternity},
-  author={Balding, David J and Nichols, Richard A},
-  journal={Genetica},
-  volume={96},
-  number={1},
-  pages={3--12},
-  year={1995},
-  publisher={Springer}
-}
-@article{goldfarb1983numerically,
-  title={A numerically stable dual method for solving strictly convex quadratic programs},
-  author={Goldfarb, Donald and Idnani, Ashok},
-  journal={Mathematical programming},
-  volume={27},
-  number={1},
-  pages={1--33},
-  year={1983},
-  publisher={Springer}
-}
-@article{boyd2011distributed,
-  title={Distributed optimization and statistical learning via the alternating direction method of multipliers},
-  author={Boyd, Stephen and Parikh, Neal and Chu, Eric and Peleato, Borja and Eckstein, Jonathan and others},
-  journal={Foundations and Trends{\textregistered} in Machine learning},
-  volume={3},
-  number={1},
-  pages={1--122},
-  year={2011},
-  publisher={Now Publishers, Inc.}
-}
-@book{nocedal2006numerical,
-  title={Numerical Optimization},
-  author={Nocedal, Jorge and Wright, Stephen J},
-  year={2006},
-  publisher={Springer}
-}
-@book{boyd2004convex,
-  title={Convex Optimization},
-  author={Boyd, Stephen and Vandenberghe, Lieven},
-  year={2004},
-  publisher={Cambridge University Press}
-}
-@online{guennebaud2022api,
-  title={The API Documentation for Eigen3},
-  author={Guennebaud, Gaël and others},
-  year={2022},
-  url={https://eigen.tuxfamily.org/dox/},
-  urldate={2022-04-21}
 }
