--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -28,6 +28,16 @@
   year={2009},
   publisher={Cold Spring Harbor Lab}
 }
+@article{frichot2014fast,
+  title={Fast and efficient estimation of individual ancestry coefficients},
+  author={Frichot, Eric and Mathieu, Fran{\c{c}}ois and Trouillon, Th{\'e}o and Bouchard, Guillaume and Fran{\c{c}}ois, Olivier},
+  journal={Genetics},
+  volume={196},
+  number={4},
+  pages={973--983},
+  year={2014},
+  publisher={Oxford University Press}
+}
 @article{raj2014faststructure,
   title={fastSTRUCTURE: variational inference of population structure in large SNP data sets},
   author={Raj, Anil and Stephens, Matthew and Pritchard, Jonathan K},
@@ -46,6 +56,14 @@
   number={12},
   pages={1587--1590},
   year={2016},
+  publisher={Nature Publishing Group}
+}
+@article{wang2022fast,
+  title={Fast and accurate population admixture inference from genotype data from a few microsatellites to millions of SNPs},
+  author={Wang, Jinliang},
+  journal={Heredity},
+  pages={1--14},
+  year={2022},
   publisher={Nature Publishing Group}
 }
 @article{carbonetto2021non,
@@ -96,7 +114,7 @@
 }
 @online{guennebaud2022api,
   title={The API Documentation for Eigen3},
-  author={Guennebaud, Gaël and others},
+  author={Guennebaud, Ga{\"e}l and others},
   year={2022},
   url={https://eigen.tuxfamily.org/dox/},
   urldate={2022-04-21}
@@ -201,4 +219,54 @@
   pages={1100--1104},
   year={2008},
   publisher={American Association for the Advancement of Science}
+}
+@article{francioli2014whole,
+  title={Whole-genome sequence variation, population structure and demographic history of the Dutch population},
+  author={Francioli, Laurent C and Menelaou, Andronild and Pulit, Sara L and Van Dijk, Freerk and Palamara, Pier Francesco and Elbers, Clara C and Neerincx, Pieter BT and Ye, Kai and Guryev, Victor and Kloosterman, Wigard P and others},
+  journal={Nature Genetics},
+  volume={46},
+  number={8},
+  pages={818--825},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+@article{pearse2004beyond,
+  title={Beyond FST: analysis of population genetic data for conservation},
+  author={Pearse, Devon E and Crandall, Keith A},
+  journal={Conservation genetics},
+  volume={5},
+  number={5},
+  pages={585--602},
+  year={2004},
+  publisher={Springer}
+}
+@article{randi2008detecting,
+  title={Detecting hybridization between wild species and their domesticated relatives},
+  author={Randi, Ettore},
+  journal={Molecular ecology},
+  volume={17},
+  number={1},
+  pages={285--293},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+@article{rosenberg2002genetic,
+  title={Genetic structure of human populations},
+  author={Rosenberg, Noah A and Pritchard, Jonathan K and Weber, James L and Cann, Howard M and Kidd, Kenneth K and Zhivotovsky, Lev A and Feldman, Marcus W},
+  journal={science},
+  volume={298},
+  number={5602},
+  pages={2381--2385},
+  year={2002},
+  publisher={American Association for the Advancement of Science}
+}
+@article{reich2009reconstructing,
+  title={Reconstructing Indian population history},
+  author={Reich, David and Thangaraj, Kumarasamy and Patterson, Nick and Price, Alkes L and Singh, Lalji},
+  journal={Nature},
+  volume={461},
+  number={7263},
+  pages={489--494},
+  year={2009},
+  publisher={Nature Publishing Group}
 }
