--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# AwesomePackage
+# AwesomePackage <img src="man/figures/logo_2.png" align="right" alt="" width="120" />
 
 <!-- badges: start -->
 <!-- badges: end -->
