--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -155,6 +155,25 @@
   year={1951},
   publisher={JSTOR}
 }
+@article{hofmann2001unsupervised,
+  title={Unsupervised learning by probabilistic latent semantic analysis},
+  author={Hofmann, Thomas},
+  journal={Machine learning},
+  volume={42},
+  number={1},
+  pages={177--196},
+  year={2001},
+  publisher={Springer}
+}
+@article{blei2003latent,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
+}
 @article{wright1949genetical,
   title={The genetical structure of populations},
   author={Wright, Sewall},
