--- a/vignettes/01_quick_start.Rmd
+++ b/vignettes/01_quick_start.Rmd
@@ -1,7 +1,7 @@
 ---
-title: 'AwesomePackage: Quick Start'
+title: 'AwesomePackage: Brief Introduction'
 author: []
 ---
 <!--- <iframe src="01_quick_start.pdf"/> -->
-Vignette: [PDF](01_quick_start.pdf){target="_blank"} (2.49M)
+Vignette: [PDF](01_quick_start.pdf){target="_blank"} (2.46M)
 <iframe src="01_quick_start.pdf" width="100%" height="1000"/>
